Don't show context menu menu if right-clicking outside

When right-clicking a KXMLGui menu bar entry you can configure it.
The menu would also show up if right clicked outside the menu which is pointless as none of the actions in the menu
would work as there's no action to configure to begin with.

BUG: 373653

Differential Revision: https://phabricator.kde.org/D9675